fix: app container overflow

--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
 #app {
   width: 100vw;
   height: 100vh;
+  overflow: hidden;
 }
 
 @font-face {
